--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
     ],
     "autoload": {
         "psr-4": { "Skeleton\\Database\\": "lib/Skeleton/Database/" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.2.x-dev"
+        }
     }
-
 }
